--- a/components/header/snippets/header.liquid
+++ b/components/header/snippets/header.liquid
@@ -6,7 +6,7 @@
       </a>
     </div>
     <nav class="header__nav">
-      <ul class="header__nav-list">
+      <ul class="header__nav-list text-[{{ section.settings.text_color }}]">
         <li class="header__nav-item">
           <a href="/collections/all" class="header__nav-link">Shop</a>
         </li>
