--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,6 +21,7 @@
 
   <body class="grid min-h-full grid-cols-[100%] grid-rows-[1fr]">
     <main>
+      {%-  section 'header' -%}
       {{ content_for_layout }}
     </main>
   </body>
