base functionality for pdp with liquid, product state is set to the window since it will change every time a user navigates to different product, will refactor pdp web components to use state after banners

--- a/components/product/sections/product.liquid
+++ b/components/product/sections/product.liquid
@@ -1,5 +1,5 @@
-s<div class="product-page">
-
+<div class="product-page">
+{%  render 'product-data' product:product %}
   <div class="lg:px-contained py-6 pb-[25px] lg:py-10 lg:py-[22px] lg:pb-[30px]">
     <div class="mx-auto grid max-w-[80rem] grid-cols-1 gap-y-5 overflow-x-hidden lg:max-w-none lg:grid-cols-[55%_43%] lg:grid-rows-[auto_1fr] lg:gap-x-6 lg:gap-y-4 xl:grid-cols-[66%_calc(34%-1.5rem)]">
 
