--- a/components/product/snippets/product-form.liquid
+++ b/components/product/snippets/product-form.liquid
@@ -1,4 +1,4 @@
-<div class="">
+<div class="product-form">
 <product-form>
   <form action="/cart/add" method="post" id="product-form-{{ product.id }}" class="flex items-center justify-center gap-4">
     <input type="hidden" name="id" id="product-variant-id" value="{{ product.selected_or_first_available_variant.id }}">
