--- a/components/product/snippets/variant-swatch.liquid
+++ b/components/product/snippets/variant-swatch.liquid
@@ -1,14 +1,23 @@
-<div class="">
+<div class="variant-swatch">
 <variant-swatch>
   <div class="flex flex-col gap-2.5 md:gap-5">
     {% for option in product.options %}
+      {% assign selected_variant = product.selected_or_first_available_variant %}
+      {% assign option_index = forloop.index0 %}
       <div class="border-border p-4 max-md:px-0 md:border">
-        <div class="flex items-center gap-2">{{ option.name }}: <span>{{ option.values[0] }}</span></div>
+        <div class="flex items-center gap-2">{{ option }}: <span>{{ selected_variant.options[option_index] }}</span></div>
         <ul class="mb-2 flex flex-wrap gap-4">
           {% for variant in product.variants %}
+            {% if option_index == 0 %}{% assign color = variant.options[option_index].name | downcase %}
             <li>
-              <button class="w-8 h-8 rounded-full border border-border variant-option" style="background-color: {{ variant.option | split: ' ' | last }};" data-variant-id="{{ variant.id }}"></button>
+              <button class="bg-{{ color }} w-8 h-8 rounded-full border border-border" data-variant-id="{{ variant.id }}"></button>
             </li>
+            {% endif %}
+            {% if option_index == 1 %}{% assign size = variant.options[option_index].name | downcase %}
+            <li>
+              <button class="relative h-10 w-auto min-w-[2.5rem] border border-border transition md:hover:border-text  rounded-sm" data-variant-id="{{ variant.id }}">{{ size }}</button>
+            </li>
+            {% endif %}
           {% endfor %}
         </ul>
       </div>
