--- a/frontend/entrypoints/main.css
+++ b/frontend/entrypoints/main.css
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/**
+ * Swiper styles
+ */
+.swiper-thumbs .swiper-slide {
+    opacity: 0.75;
+    max-width: 200px;
+}
+.swiper-thumbs .swiper-slide.swiper-slide-thumb-active {
+    opacity: 1;
+}
+.swiper-slide-thumb-active img {
+    border: 2px #000000 solid;
+    object-fit: cover;
+}
+
+/* https://iconsvg.xyz/ */
+.swiper-button-next {
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"/></svg>') no-repeat center center;
+    background-size: 40px 40px;
+    color: #000;
+
+    right: 10px; /* Adjust position as needed */
+}
+
+.swiper-button-prev {
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"/></svg>') no-repeat center center;
+    background-size: 40px 40px;
+    color: #000;
+
+    left: 10px; /* Adjust position as needed */
+}
+
+  .swiper-button-next:hover, .swiper-button-prev:hover {
+    
+  }
+
+  .swiper-button-next::after, .swiper-button-prev::after {
+    opacity: 0;
+  }
