fixed symlink on change issue for liquid files by including components directory in .shopifyignore and vite plugin for liquid files, also updated option selection in pdp

--- a/components/product/sections/product.liquid
+++ b/components/product/sections/product.liquid
@@ -14,7 +14,7 @@
 
             {% comment %} <!-- first --> {% endcomment %}
             <div class="relative flex justify-between text-xl">
-              <h1 class="pdp-title max-w-[50%]">{{ product.type }}</h1>
+              <h1 class="pdp-title max-w-[50%]">{{ product.title }}</h1>
               <div class="flex flex-col items-end">
                 <div class="flex min-h-[1.5rem] gap-2">
                   <p class="null pdp-title font-bold lg:text-[19.2px]">{{ product.price }}</p>
