--- a/components/product/snippets/variant-swatch.liquid
+++ b/components/product/snippets/variant-swatch.liquid
@@ -1,6 +1,9 @@
 <div class="variant-swatch">
 <variant-swatch>
   <div class="flex flex-col gap-2.5 md:gap-5">
+
+    {% assign colors = '' | split: '' %}
+    {% assign sizes = '' | split: ''%}
     {% for option in product.options %}
       {% assign selected_variant = product.selected_or_first_available_variant %}
       {% assign option_index = forloop.index0 %}
@@ -8,16 +11,28 @@
         <div class="flex items-center gap-2">{{ option }}: <span>{{ selected_variant.options[option_index] }}</span></div>
         <ul class="mb-2 flex flex-wrap gap-4">
           {% for variant in product.variants %}
-            {% if option_index == 0 %}{% assign color = variant.options[option_index].name | downcase %}
-            <li>
-              <button class="bg-{{ color }} w-8 h-8 rounded-full border border-border" data-variant-id="{{ variant.id }}"></button>
-            </li>
+
+            {% if option_index == 0 %}
+              {% assign color = variant.options[option_index].name | downcase %}
+              {% unless colors contains color %}
+                {% assign colors = colors | append: color %}
+              <li>
+                <button class="bg-{{ color }} w-8 h-8 rounded-full border border-border" data-variant-id="{{ variant.id }}"></button>
+              </li>
+            {% endunless %}
             {% endif %}
-            {% if option_index == 1 %}{% assign size = variant.options[option_index].name | downcase %}
-            <li>
-              <button class="relative h-10 w-auto min-w-[2.5rem] border border-border transition md:hover:border-text  rounded-sm" data-variant-id="{{ variant.id }}">{{ size }}</button>
-            </li>
+
+
+            {% if option_index == 1 %}
+              {% assign size = variant.options[option_index].name | downcase %}
+              {% unless sizes contains size %}
+                {% assign sizes = sizes | append: size %}
+              <li>
+                <button class="relative h-10 w-auto min-w-[2.5rem] border border-border transition md:hover:border-text  rounded-sm" data-variant-id="{{ variant.id }}">{{ size }}</button>
+              </li>
+              {% endunless %}
             {% endif %}
+
           {% endfor %}
         </ul>
       </div>
@@ -25,18 +40,3 @@
   </div>
 </variant-swatch>
 </div>
-
-{% comment %}
-<div class="swiper">
-  <div class="swiper-wrapper">
-    {% for variant in product.variants %}
-      <div class="swiper-slide">
-        <img src="{{ variant.image.src }}" alt="{{ variant.title }}">
-      </div>
-    {% endfor %}
-  </div>
-  <div class="swiper-pagination"></div>
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
-</div>
-{% endcomment %}
