--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -24,5 +24,6 @@
       {%-  section 'header' -%}
       {{ content_for_layout }}
     </main>
+    {%-  section 'promotions' -%}
   </body>
 </html>
