Created customer object for state management for recording which promotions the user has interacted with, stored as a map at customer.promotionHistory and listens to promotion-related events from modal.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -24,7 +24,8 @@
       {%-  section 'header' -%}
       {{ content_for_layout }}
     </main>
-    {%-  section 'promotions' -%}
-    {%-  section 'modals' -%}
+    {%- section 'promotions' -%}
+    {%- section 'modals' -%}
+    {%- section 'customer' -%}
   </body>
 </html>
