updated modal logic for main use cases. Included modal conditions: href location, seen and dismiss count. Included promotion conditions: js expressions. Logic for my 1st personal modal: if user has seen welcome_utm modal 3 times, show modal. Logic for my 1st personal modal: if ip service is active and the user is not from the US, show modal

--- a/components/modals/sections/modals.liquid
+++ b/components/modals/sections/modals.liquid
@@ -112,7 +112,7 @@
         },
         {
           "type": "header",
-          "content": "Modal Settings"
+          "content": "Modal Design Settings"
         },
         {
           "type": "select",
@@ -182,6 +182,22 @@
           "id": "cta_text_color",
           "label": "CTA Text Color",
           "default": "#ffffff"
+        },
+        {
+          "type": "header",
+          "content": "Modal View Settings"
+        },
+        {
+          "type": "number",
+          "id": "seenCount",
+          "label": "Hide After This Many Seen",
+          "info": "If set to 3, will never show again to this customer after 3 times"
+        },
+        {
+          "type": "number",
+          "id": "dismissedCount",
+          "label": "Hide After This Many Dismissed",
+          "info": "If set to 3, will never show again to this customer after 3 times"
         }
       ]
     }
