--- a/components/product/snippets/product-form.liquid
+++ b/components/product/snippets/product-form.liquid
@@ -26,7 +26,7 @@
 
     <div class="flex-1">
       <div>
-        <button id="atc-btn" aria-label="Add to Cart" class="btn-primary relative w-full Rise-add-to-cart-button" type="submit">
+        <button [add-to-cart] aria-label="Add to Cart" class="btn-primary bg-primary font-karla py-6 text-white relative w-full Rise-add-to-cart-button" type="submit">
           <p class="transition">Add to Cart</p>
         </button>
       </div>
