--- a/components/header/sections/header.liquid
+++ b/components/header/sections/header.liquid
@@ -1,36 +1,1 @@
-<section class='bg-red-300'>
-  <nav>
-    {%- render 'header' -%}
-  </nav>
-</section>
-
-
-{% comment %} <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const header = new Header(
-      '{{ section.settings.logo_src }}',
-      '{{ section.settings.account_url }}'
-    );
-    header.render();
-  });
-</script> {% endcomment %}
-
-{% schema %}
-{
-  "name": "Header",
-  "settings": [
-    {
-      "type": "color",
-      "id": "background_color",
-      "label": "Background Color",
-      "default": "#ffffff"
-    },
-    {
-      "type": "color",
-      "id": "text_color",
-      "label": "Text Color",
-      "default": "#000000"
-    }
-  ]
-}
-{% endschema %}
+D:/Knowledge_Base/frontend/shopify-vite-build/sections/header.liquid
